Tune L&F - FIX move album specific css into separate module file - FIX reduce changes of jumping dir/photo box sizes due to long names - ADD up & dir actions act on whole container area

--- a/app/assets/stylesheets/gi_album/engine.css
+++ b/app/assets/stylesheets/gi_album/engine.css
@@ -10,84 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ * require_tree .
  *= require_self
  */
-
-/*
- * HACK KI show scrollbar always to avoid jumping (not very optimal solution, but
- * should temporarily fix flickering)
- */
-html {
-  overflow: -moz-scrollbars-vertical;
-  overflow: scroll;
-}
-
-gi-table-fixed {
-  table-layout: fixed;
-}
-
-gi-table-fixed th:nth-child(1), td:nth-child(1) {
-  overflow: hidden;
-  width: 50%;
-}
-gi-table-fixed th:nth-child(2), td:nth-child(2) {
-  overflow: hidden;
-  width: 50%;
-}
-
-.gi-btn-pagination {
-  width: 3em;
-}
-
-.gi-thumb {
-  display: inline-block;
-  margin: 0.5em;
-  padding: 1em;
-  width: 20em;
-}
-
-.gi-thumb:hover {
-  background-color: #aceace;
-}
-
-.gi-thumb-dir {
-  border-color: transparent;
-  border-style: solid;
-  border-width: 0.1em;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-}
-
-.gi-thumb-dir:hover {
-  border-color: lightgray;
-
-  transition-duration: 0.3s;
-}
-
-.gi-thumb-photo {
-  background-color: #dedede;
-
-  border-style: solid;
-  border-width: 0.1em;
-  border-color: lightgray;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 25px;
-}
-
-.gi-thumb-photo:hover {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 5px;
-
-  transition-duration: 0.2s;
-}
-
-.gi-thumb-image {
-  height: 100px;
-}
